# MDPocketDistanceAnalysis

./: .gitignore  pyproject.toml  utilsatp.py
configs/: povme_config.yaml
notebooks/: plotting.ipynb
notebooks/.ipynb_checkpoints/: plotting-checkpoint.ipynb
src/mdpocketclustering/: __init__.py  analysis.py  analysis_prolif.py  analysis_prolif_registry.py  analysis_prolif_single_traj.py  clustering.py  contact_fingerprint.py  dataframe.py  features.py  features_interactions_plip.py  gbsa_results.py  mdanalysis_molstar_viewer.py  models.py  pocket_volume.py  registry.py  systems.py
src/mdpocketclustering/analysistrj/: single.py
src/mdpocketclustering/core/: trajectory.py
src/mdpocketclustering/metrics/: mindistance.py  rg.py  rmsd.py  rmsf.py
tests/: test_aggregation.py  test_analysis.py  test_analysis_interactions_plip.py  test_analysis_prolif.py  test_analysis_prolif_single_traj.py  test_clustering.py  test_contact_fingerprint.py  test_dataframe.py  test_features.py  test_features_interactions_plip.py  test_mdanalysis_molstar_viewer.py  test_mindistance.py  test_models.py  test_pipeline.py  test_pocket_volume.py  test_prolif_registry.py  test_registry.py  test_rg.py  test_rmsd.py  test_rmsf.py
tests/checkpoints_prolif/: run1.csv  run2.csv
