[project]
name = "mdpocketclustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipymolstar>=0.1.0",
    "mdance>=0.4.0",
    "povme",
    "prolif>=2.1.0",
    "rdkit>=2026.3.1",
]

[project.scripts]
mdpocketclustering = "mdpocketclustering:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.uv.sources]
povme = { git = "https://github.com/durrantlab/POVME.git" }
